--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<packaging>jar</packaging>
 	<version>1.0</version>
 	<name>simple-service-locator</name>
-	<url>http://maven.apache.org</url>
+	<url>https://github.com/matthewjosephtaylor/simple-service-locator</url>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
